extracting embedding all layer

--- a/ML_esm2_all_layers.ipynb
+++ b/ML_esm2_all_layers.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Machine Learning Applied to identify best layer predictor"
+    "## Machine Learning Applied to identify protein degradation stability"
    ]
   },
   {
@@ -663,12 +663,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_metrics(pred, test):\n",
+    "def compute_metrics(test, pred):\n",
     "    '''Compute metrics'''\n",
     "    # compute metrics\n",
-    "    r2 = metrics.r2_score(pred, test)\n",
-    "    mse = metrics.mean_squared_error(pred, test)\n",
-    "    rmse = metrics.mean_squared_error(pred, test)\n",
+    "    r2 = metrics.r2_score(test, pred)\n",
+    "    mse = metrics.mean_squared_error(test, pred)\n",
+    "    rmse = metrics.mean_squared_error(test, pred)\n",
     "\n",
     "    r2 = metrics.r2_score(test, pred)\n",
     "    mae = metrics.mean_absolute_error(test, pred)\n",
@@ -5516,99 +5516,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "def run_regression_pca(X_train, X_test, y_train, y_test, target_name, model, layer, n_comp=100):\n",
-    "\n",
-    "    scaler = StandardScaler()\n",
-    "    X_train_scaled = scaler.fit_transform(X_train)\n",
-    "    X_test_scaled = scaler.transform(X_test)\n",
-    "    \n",
-    "    # Apply PCA only on the training set\n",
-    "    pca = PCA(n_comp)\n",
-    "    X_train_PCAs = pca.fit_transform(X_train_scaled)\n",
-    "    \n",
-    "    # Apply the same PCA transformation to the test set\n",
-    "    X_test_PCAs = pca.transform(X_test_scaled)\n",
-    "    \n",
-    "    # Create a list of models to test\n",
-    "    if model == 'linear':\n",
-    "        model = LinearRegression()\n",
-    "        param_grid = {'fit_intercept': [True, False], 'normalize': [True, False]}\n",
-    "    elif model == 'lasso':\n",
-    "        model = Lasso()\n",
-    "        param_grid = {'alpha': [0.0001, 0.001, 0.01, 0.1, 1],'max_iter': [10000]}\n",
-    "    elif model == 'svr':\n",
-    "        model = SVR()\n",
-    "        param_grid = {'C': [0.1, 1, 10], 'kernel': ['linear', 'rbf'], 'gamma': ['scale', 0.1, 0.01, 0.001]}\n",
-    "    else:\n",
-    "        print('Model not found')\n",
-    "        print('Model options: linear, lasso, svr')\n",
-    "    \n",
-    "    # search best hyperparameter \n",
-    "    grid_search = GridSearchCV(model, param_grid, scoring='r2', cv=10, n_jobs=30)\n",
-    "    \n",
-    "    # train in the whole training set\n",
-    "    grid_search.fit(X_train_PCAs, y_train)\n",
-    "    \n",
-    "    # make predictions on the PCA-transformed test set\n",
-    "    y_pred = grid_search.predict(X_test_PCAs)\n",
-    "    train_pred = grid_search.predict(X_train_PCAs)\n",
-    "    \n",
-    "    # Model evaluation on test data set\n",
-    "    test_r2 = metrics.r2_score(y_test, y_pred)\n",
-    "    test_mae = metrics.mean_absolute_error(y_test, y_pred)\n",
-    "    test_mse = metrics.mean_squared_error(y_test, y_pred)\n",
-    "    test_rmse = np.sqrt(test_mse)\n",
-    "    test_spearman_Coef = scipy.stats.spearmanr(y_test, y_pred)\n",
-    "   \n",
-    "    model_name = grid_search.best_estimator_.__class__.__name__\n",
-    "    best_param = str(grid_search.best_params_)\n",
-    "    \n",
-    "    # Saving results\n",
-    "    res_dict = {}\n",
-    "    res_dict[\"Target_name\"]= target_name\n",
-    "    res_dict[\"Layer\"]= layer\n",
-    "    res_dict[\"N_components\"]=  n_comp \n",
-    "    res_dict[\"Model\"]= model_name \n",
-    "    res_dict[\"parameters\"]= best_param\n",
-    "    \n",
-    "    res_dict[\"test_R2_score\"] = test_r2\n",
-    "    res_dict[\"test_MAE_score\"] = test_mae\n",
-    "    res_dict[\"test_RMSE_score\"] = test_rmse\n",
-    "    res_dict[\"test_spearman_Coef\"] = test_spearman_Coef\n",
-    "    \n",
-    "    # updating data frame with results\n",
-    "    results  = pd.DataFrame(res_dict).reset_index(drop=True)\n",
-    "\n",
-    "    # Print the mean scores\n",
-    "    print(f\"Layer: {layer}, Num componemts: {n_comp}, R2: {test_r2:.2f}, best params: {best_param}\")\n",
-    "\n",
-    "    # Plot the results\n",
-    "    filename = f\"{target_name}_{layer}_{n_comp}_{model_name}.png\"\n",
-    "    plt.scatter(train_pred, y_train, label=\"Train samples\", c='#d95f02')\n",
-    "    plt.scatter(y_pred, y_test, label=\"Test samples\", c='#7570b3')\n",
-    "    plt.title(f\"Model: {model_name}\")\n",
-    "    plt.xlabel(\"Predicted Stability\")\n",
-    "    plt.ylabel(\"True Stability\")\n",
-    "    \n",
-    "    global_min = np.floor(min(min(train_pred), min(y_train), min(y_test), min(y_pred)))\n",
-    "    global_max = np.ceil(max(max(train_pred), max(y_train), max(y_test), max(y_pred)))\n",
-    "   \n",
-    "    plt.plot([global_min, global_max], [global_min, global_max], c='k', zorder=0) \n",
-    "    plt.text(global_min, global_max-4, f'Train R$^2$: {grid_search.score(X_train_PCAs, y_train).round(2)}', fontsize = 9)\n",
-    "    plt.text(global_min, global_max-5, f'Test R$^2$: {grid_search.score(X_test_PCAs, y_test).round(2)}', fontsize = 9)\n",
-    "    \n",
-    "    plt.legend()\n",
-    "    #plt.savefig(filename, format='png', dpi=300)\n",
-    "    plt.show()\n",
-    "    plt.close()      \n",
-    "\n",
-    "    return results, y_test"
-   ]
   }
  ],
  "metadata": {
